Actions
Bug #6328
closedFix cstyle errors in zfs codebase
Start date:
2015-10-13
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
We are working on modifications to the cstyle tool that detect a number of existing errors in the codebase. We should fix those before the cstyle fix is pushed.
Files
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 9a686fbc186e8e2a64e9a5094d44c7d6fa0ea167
commit 9a686fbc186e8e2a64e9a5094d44c7d6fa0ea167 Author: Paul Dagnelie <pcd@delphix.com> Date: 2015-10-18T16:53:48.000Z 6328 Fix cstyle errors in zfs codebase Reviewed by: Matthew Ahrens <mahrens@delphix.com> Reviewed by: Alex Reece <alex@delphix.com> Reviewed by: Richard Elling <Richard.Elling@RichardElling.com> Reviewed by: Jorgen Lundman <lundman@lundman.net> Approved by: Robert Mustacchi <rm@joyent.com>
Updated by Richard PALO over 7 years ago
- File zfs-related-updates.diff zfs-related-updates.diff added
I noticed this update, but the attached seem still cstyle and NULL constant pointer related.
Updated by Electric Monk over 7 years ago
git commit 2a446632681882e5dfe50f2f301401588f1ce734
commit 2a446632681882e5dfe50f2f301401588f1ce734 Author: Robert Mustacchi <rm@joyent.com> Date: 2015-10-19T00:08:27.000Z 6328 Fix cstyle errors in zfs codebase (fix studio)
Actions