usr/src/lib/libzfs/common/libzfs_util.c
@@ -23,7 +23,7 @@
  * Copyright (c) 2005, 2010, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2013, Joyent, Inc. All rights reserved.
  * Copyright 2015 Nexenta Systems, Inc. All rights reserved.
- * Copyright (c) 2011, 2014 by Delphix. All rights reserved.
+ * Copyright (c) 2011, 2015 by Delphix. All rights reserved.
  */
 
 /*
@@ -2036,7 +2036,8 @@ cos_print_one_property(const char *poolname, const char *cosname,
  * and bs are undefined.
  */
 int
-zfs_get_hole_count(const char *path, uint64_t *count, uint64_t *bs) {
+zfs_get_hole_count(const char *path, uint64_t *count, uint64_t *bs)
+{
 	int fd, err;
 	struct stat64 ss;
 	uint64_t fill;
